# Vector-DB-CPP

./: CMakeLists.txt  README.md  StorageManager.cpp  StorageManager.h  build.bat  index.html  main.cpp  nebula_data.wal
include/Algorithms/: BruteForce.h  HNSW.h  KDTree.h
include/Core/: DocumentDB.h  StorageManager.h  Types.h  VectorDB.h
include/Ollama/: OllamaClient.h
include/Utils/: DistanceMetrics.h  JsonHelpers.h  TextChunker.h
src/Algorithms/: HNSW.cpp  KDTree.cpp
src/Core/: DocumentDB.cpp  StorageManager.cpp  VectorDB.cpp
src/Ollama/: OllamaClient.cpp
tests/: test_algos.cpp
